--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -155,6 +155,10 @@ header a.button {
   top: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
+header .rsvp {
+  margin-top: 75px;
+  float: right;
+}
 aside a.button {
   width: 138px;
   padding-left: 64px;
@@ -447,6 +451,10 @@ footer a:hover {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;                     
     border-radius: 5px;    
+  }
+  header .rsvp {
+    float: none;
+    margin: 0 0 15px 0;
   }
   header a.button small {
     font-size: 13px;
